exclusao de camadas nao utilizadas
